# convoluted

./: .gitignore  Cargo.toml  LICENSE  rustc-ice-2025-03-17T20_29_58-7284.txt
convolution_test/: Cargo.toml
convolution_test/src/: main.rs
mnist/: Cargo.toml
mnist/src/: lib.rs
src/: array.rs  cost.rs  layer.rs  lib.rs  main.rs  network.rs
src/activation/: leaky_relu.rs  mod.rs  relu.rs  sigmoid.rs
src/layer/: bias.rs  convolution.rs  dense.rs  mod.rs  pooling.rs  relu.rs  reshape.rs  sigmoid.rs
train_2d/: Cargo.toml
train_2d/src/: main.rs  shader.frag
