[package]
name = "convoluted"
version = "0.1.0"
edition = "2024"

[features]
bincode = ["dep:bincode", "serde"]
serde = ["dep:serde", "dep:serde_with"]

[workspace]
members = ["mnist"]

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
serde_with = { version = "3.12.0", optional = true }
