[package]
name = "convoluted"
version = "0.1.0"
edition = "2024"

[features]
bincode = ["dep:bincode", "serde"]
serde = ["dep:serde", "dep:serde_with"]

[workspace]
members = [ "convolution_test","mnist"]

[dependencies]
rand = "0.9.0"
typenum = { version = "1.18.0", features = ["const-generics"]}
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_with = { version = "3.12.0", optional = true }
bincode = { version = "1.3.3", optional = true }
